home-k8s/apps/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app.kubernetes.io/name: postgres
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: postgres
